DT-2099 Removes padding from button icon to stop overlapping text

--- a/less/widgets/basket.less
+++ b/less/widgets/basket.less
@@ -285,8 +285,12 @@
 
     // Basket Remove Button
 
-    .item-remove {
+    // LESS framework reset
+    .button.icon {
         padding-left: 0;
+    }
+
+    .item-remove {
         padding: 0;
         width: 40px;
         height: 40px;
